--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npmcj",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/903300148/npmcj"
   },
   "author": {
     "name": "xiaocai",
